--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
     "@arcgis/core": "^4.19.1",
+    "@types/arcgis-js-api": "4.19.0",
     "esri-loader": "^3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
