--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
     "@arcgis/core": "^4.19.1",
-    "@types/arcgis-js-api": "4.19.0",
+    "@types/arcgis-js-api": "^4.19.0",
     "esri-loader": "^3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -44,5 +44,18 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.2.10.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuyangHan/Angular-GIS.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xuyangHan/Angular-GIS/issues"
+  },
+  "homepage": "https://github.com/xuyangHan/Angular-GIS#readme"
 }
