--- a/package.json
+++ b/package.json
@@ -1,61 +1,63 @@
 {
-  "name": "angular-gis",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.2.11",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
-    "@arcgis/core": "^4.19.1",
-    "@types/arcgis-js-api": "^4.19.0",
-    "esri-loader": "^3.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.10",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
-  },
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.2.10.",
-  "main": "karma.conf.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xuyangHan/Angular-GIS.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/xuyangHan/Angular-GIS/issues"
-  },
-  "homepage": "https://github.com/xuyangHan/Angular-GIS#readme"
+    "name": "angular-gis",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "deploy": "gh-pages -d dist/Angular-GIS"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~11.2.11",
+        "@angular/common": "~11.2.11",
+        "@angular/compiler": "~11.2.11",
+        "@angular/core": "~11.2.11",
+        "@angular/forms": "~11.2.11",
+        "@angular/platform-browser": "~11.2.11",
+        "@angular/platform-browser-dynamic": "~11.2.11",
+        "@angular/router": "~11.2.11",
+        "@arcgis/core": "^4.19.1",
+        "@types/arcgis-js-api": "^4.19.0",
+        "esri-loader": "^3.1.0",
+        "gh-pages": "^3.1.0",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1102.10",
+        "@angular/cli": "~11.2.10",
+        "@angular/compiler-cli": "~11.2.11",
+        "@types/jasmine": "~3.6.0",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~6.1.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~4.1.5"
+    },
+    "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.2.10.",
+    "main": "karma.conf.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/xuyangHan/Angular-GIS.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/xuyangHan/Angular-GIS/issues"
+    },
+    "homepage": "https://xuyanghan.github.io/Angular-GIS"
 }
