--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@angular/router": "~11.2.11",
         "@arcgis/core": "^4.19.1",
         "@types/arcgis-js-api": "^4.19.0",
+        "chart.js": "^3.2.1",
+        "echarts": "^5.1.1",
         "esri-loader": "^3.1.0",
         "gh-pages": "^3.1.0",
         "rxjs": "~6.6.0",
@@ -32,6 +34,7 @@
         "@angular-devkit/build-angular": "~0.1102.10",
         "@angular/cli": "~11.2.10",
         "@angular/compiler-cli": "~11.2.11",
+        "@types/chart.js": "^2.9.32",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
